// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a contact correctly 1`] = `
<div
  className="sc-bdVaJa dNIUDI"
>
  <div
    className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
  >
    <div
      className="MuiCardMedia-root-29"
      style={
        Object {
          "backgroundImage": "url(\\"/avatars/24.jpg\\")",
        }
      }
    />
    <div
      className="MuiCardContent-root-32"
    >
      <h2
        className="MuiTypography-root-33 MuiTypography-headline-38 MuiTypography-gutterBottom-51"
      >
        Marchall
         
        Abdee
      </h2>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42"
      >
        Email: 
        mabdee0@behance.net
      </p>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42"
      >
        Phone: 
        2539464783
      </p>
    </div>
    <div
      className="MuiCardActions-root-59"
    >
      <a
        className="MuiCardActions-action-60"
        href="/edit/4"
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-87 MuiButton-root-61 MuiButton-text-63 MuiButton-textPrimary-64 MuiButton-flat-66 MuiButton-flatPrimary-67 MuiButton-sizeSmall-84"
          disabled={false}
          id="edit-contact"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-62"
          >
            Edit
          </span>
          <span
            className="MuiTouchRipple-root-90"
          />
        </button>
      </a>
      <button
        className="MuiButtonBase-root-87 MuiButton-root-61 MuiButton-text-63 MuiButton-textPrimary-64 MuiButton-flat-66 MuiButton-flatPrimary-67 MuiButton-sizeSmall-84 MuiCardActions-action-60"
        disabled={false}
        id="delete-contact"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-62"
        >
          Delete
        </span>
        <span
          className="MuiTouchRipple-root-90"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly when loading 1`] = `
<div
  className="sc-bdVaJa dNIUDI"
>
  <div
    className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
  >
    <div
      className="MuiCardMedia-root-29"
      style={
        Object {
          "backgroundImage": "url(\\"/avatars/24.jpg\\")",
        }
      }
    />
    <div
      className="Spinner-root-31"
    >
      <div
        className="MuiCircularProgress-root-97 MuiCircularProgress-colorPrimary-100 MuiCircularProgress-indeterminate-99"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-102"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-103 MuiCircularProgress-circleIndeterminate-105"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiCardActions-root-59"
    >
      <a
        className="MuiCardActions-action-60"
        href="/edit/4"
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-87 MuiButton-root-61 MuiButton-text-63 MuiButton-textPrimary-64 MuiButton-flat-66 MuiButton-flatPrimary-67 MuiButton-sizeSmall-84"
          disabled={false}
          id="edit-contact"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-62"
          >
            Edit
          </span>
          <span
            className="MuiTouchRipple-root-90"
          />
        </button>
      </a>
      <button
        className="MuiButtonBase-root-87 MuiButton-root-61 MuiButton-text-63 MuiButton-textPrimary-64 MuiButton-flat-66 MuiButton-flatPrimary-67 MuiButton-sizeSmall-84 MuiCardActions-action-60"
        disabled={false}
        id="delete-contact"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-62"
        >
          Delete
        </span>
        <span
          className="MuiTouchRipple-root-90"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly when no large avatar image 1`] = `
<div
  className="sc-bdVaJa dNIUDI"
>
  <div
    className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
  >
    
    <div
      className="MuiCardContent-root-32"
    >
      <h2
        className="MuiTypography-root-33 MuiTypography-headline-38 MuiTypography-gutterBottom-51"
      >
        Marchall
         
        Abdee
      </h2>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42"
      >
        Email: 
        mabdee0@behance.net
      </p>
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42"
      >
        Phone: 
        2539464783
      </p>
    </div>
    <div
      className="MuiCardActions-root-59"
    >
      <a
        className="MuiCardActions-action-60"
        href="/edit/4"
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-87 MuiButton-root-61 MuiButton-text-63 MuiButton-textPrimary-64 MuiButton-flat-66 MuiButton-flatPrimary-67 MuiButton-sizeSmall-84"
          disabled={false}
          id="edit-contact"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-62"
          >
            Edit
          </span>
          <span
            className="MuiTouchRipple-root-90"
          />
        </button>
      </a>
      <button
        className="MuiButtonBase-root-87 MuiButton-root-61 MuiButton-text-63 MuiButton-textPrimary-64 MuiButton-flat-66 MuiButton-flatPrimary-67 MuiButton-sizeSmall-84 MuiCardActions-action-60"
        disabled={false}
        id="delete-contact"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-62"
        >
          Delete
        </span>
        <span
          className="MuiTouchRipple-root-90"
        />
      </button>
    </div>
  </div>
</div>
`;
